[package]
name = "tree-sitter-wgsl"
description = "wgsl grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "wgsl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/gpuweb/tree-sitter-wgsl"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.9"

[build-dependencies]
cc = "1.0"
